apps/clash-master/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clash-master
  namespace: homelab
spec:
  selector:
    app: clash-master
  ports:
    - name: web
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: api
      protocol: TCP
      port: 3001
      targetPort: 3001
    - name: websocket
      protocol: TCP
      port: 3002
      targetPort: 3002
